--- a/package.json
+++ b/package.json
@@ -8,16 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
+    "@vue/cli": "^4.4.6",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "@vue/cli-service-global": "^4.4.6",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "json-server": "^0.16.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
